got the cards to wrap correctly

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -12,7 +12,9 @@ body {
   height: 72px;
   background: darkmagenta;
   color: white;
-  font-size: 22px;
+  font-size: 32px;
+  font-weight: 900;
+  padding: 16px;
 }
 
 .footer {
@@ -39,13 +41,24 @@ body {
   border-radius: 4px;
   display: flex;
   flex-wrap: wrap;
+  padding: 32px;
+  gap: 5px;
+  max-width: 33.3%;
+}
+
+.content {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 32px;
+  gap: 5px;
   flex-grow: 1;
   flex-basis: 200px;
-  gap: 3px;
 }
 
 .container{
-  flex-direction: row;
+  display: flex;  
+  flex-wrap: wrap;
+  align-items: stretch;
 }
 
 ul {
@@ -54,4 +67,6 @@ ul {
 
 a {
   text-decoration: none;
+  font-size: 24px;
+  color: white;
 }
